# open-webui-plugins

./: .gitignore  README.md  backup.sh  docker-compose.yaml  mem.py  prompts.py  pyproject.toml  test_utils.py
open_webui_plugins/: mem.py  prompts.py  test_prompts.py
